syntax = "proto3";

option csharp_namespace = "gRPCCentrosOperacion";

package greet;

// The greeting service definition.
service CentroOperacionServ {
  // Sends a greeting
  //rpc Adicionar (AdicRequest) returns (AdicReply);
  rpc Leer (GetCORequest) returns (COReply);
  rpc LeerTodos (GetCORequestLeerTodos) returns (COReplyLeerTodos);
}

message GetCORequest{
	string IdCo = 1;
}

message COReply{
	int32 Compania = 1;
	string Id = 2;
	string RegionalId = 3;
	string Descripcion = 4;		
	enum EstadoCO{
		activo = 0;
		inactivo = 1;
	}
	EstadoCO IndEstado = 5;
	int32 ContactoRowid = 6;
	ContactoCO Contacto = 7;
}

message ContactoCO{
	int32 Compania = 1;
	string Nombre = 2;
	string Direccion = 3;
	string Telefono = 4;
}

message GetCORequestLeerTodos{
	int32 IdCia = 1;
}

message COReplyLeerTodos{
	repeated COReply COReply= 1;
}
